<resources>
    <string name="app_name">JMComercialApp</string>
    <!-- Títulos de los fragments -->
    <string name="inicio_sesion_fragment">Inicio de sesión</string>
    <string name="menu_principal_fragment">Menú Principal</string>
    <string name="lista_clientes_fragment">Clientes</string>

    <string name="content_descripcion">ContentDescripcion</string>
    <string name="title_lista_clientes_main">Clientes registrados</string>
    <string name="textErrorConection">Verifique su conexión de red</string>
    <string name="textLoading">Cargando…</string>
    <string name="title_detalle_cliente">Información del cliente</string>
    <string name="caption_name">Nombre</string>
    <string name="caption_last_name">Apellido</string>
    <string name="caption_city">Ciudad</string>
    <string name="caption_geolocation">Geolocalización</string>
    <string name="caption_address">Dirección:</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="title_add_cliente">Registrar nuevo cliente</string>
    <string name="welcome_app">Bienvenido a \nJM Comercial App</string>
    <string name="login_title">Inicio de sesión</string>
    <string name="btn_forgot_password">Olvide mi contraseña</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="subtitle_login">Iniciar sesión</string>
    <string name="dont_have_account">No tienes una cuenta?</string>
    <string name="caption_create_account">Crear cuenta</string>
    <string name="caption_google">Google</string>
    <string name="caption_twitter">Twitter</string>
    <string name="caption_facebook">Facebook</string>
    <string name="title_menu_principal">Menú Principal</string>
    <string name="saludo_menu">%s, %s!</string>
    <string name="goodMorning">Buenos días</string>
    <string name="goodAfternoon">Buenas tardes</string>
    <string name="goodNight">Buenas noches</string>
    <string name="alternative_greeting">Hola</string>
    <string name="caption_select_city_popup">Elige una ciudad</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="caption_selected_empty">(Ninguno)</string>
    <string name="btn_geolocation">Geolocalización</string>
    <string name="btn_select_city">Ciudad</string>
    <string name="caption_put_email">Ingrese su correo electrónico</string>
    <string name="caption_put_phone">Ingrese su número de teléfono</string>
    <string name="message_cancel_abm">Tus cambios no han sido guardados</string>
    <string name="btn_discard">Descartar</string>
    <string name="btn_save">Guardar</string>
    <string name="caption_direccion">Dirección</string>
    <string name="data_required">Valor requerido</string>
    <string name="city_required">Debes indicar su ciudad</string>
    <string name="btn_select_doc_type">Tipo de documento</string>
    <string name="caption_select_doc_popup">Elige un Tipo de Documento</string>
    <string name="caption_doc_type">Número Documento</string>
    <string name="btn_stay_here">Quedarme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_update">Modificar</string>
    <string name="title_update_cliente">Modificar cliente</string>

</resources>