<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.jmcomercialapp.b_viewmodel.modulos.clientes.ClienteViewModel" />
        <variable
            name="viewModelUtils"
            type="com.example.jmcomercialapp.b_viewmodel.utils.UtilsViewModel" />
        <variable
            name="updatecliente"
            type="com.example.jmcomercialapp.a_ui.modulos.clientes.abm.UpdateCliente" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitleRegisterCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/big_title_main"
            android:text="@string/title_update_cliente"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@+id/linearButtonsRegisterCliente"
            android:layout_below="@+id/tvTitleRegisterCliente"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="-4dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitleRegisterCliente"
            android:contentDescription="@string/content_descripcion">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputNombre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        app:errorIconDrawable="@drawable/ic_error"
                        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputNombreValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/caption_name"
                            android:text="@{viewModel.cliente.nombre}"
                            android:inputType="textPersonName|textNoSuggestions"
                            android:imeOptions="actionNext"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputApellido"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputApellidoValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/caption_last_name"
                            android:text="@{viewModel.cliente.apellido}"
                            android:inputType="textPersonName|textNoSuggestions"
                            android:imeOptions="actionNext"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSelectDocType"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/btn_select_doc_type"
                        android:onClick="@{() -> updatecliente.btnTipoDoc()}"
                        app:icon="@drawable/ic_add_24dp"
                        />

                    <TextView
                        android:id="@+id/tvSelectDocType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:gravity="center|end"
                        android:text="@{viewModelUtils.selectedDocType.toString()}"
                        android:textSize="16sp"
                        tools:text="(Ninguno)"/>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputNumDoc"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputNumDocValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/caption_doc_type"
                        android:text="@{viewModel.cliente.numeroDocumento}"
                        android:inputType="numberSigned|textNoSuggestions"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSelectCity"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/btn_select_city"
                        android:onClick="@{() -> updatecliente.btnCiudad()}"
                        app:icon="@drawable/ic_add_24dp"
                        />

                    <TextView
                        android:id="@+id/tv_selected_city"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:gravity="center|end"
                        android:text="@{viewModelUtils.selectedCity.toString()}"
                        android:textSize="16sp"
                        tools:text="(Ninguno)"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAddGeolocation"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/btn_geolocation"
                        android:onClick="@{() -> updatecliente.btnAddGeolocationAction()}"
                        app:icon="@drawable/ic_add_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:gravity="center|end"
                        tools:text="(Ninguno)"
                        android:textSize="16sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/inputDireccionValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:autofillHints="postalAddress"
                    android:gravity="start|top"
                    android:hint="@string/caption_direccion"
                    android:text="@{viewModel.cliente.direccion}"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minHeight="48dp" />

            </LinearLayout>

        </ScrollView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgMessageAbmCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:srcCompat="@drawable/wifi_off" />

        <LinearLayout
            android:id="@+id/linearButtonsRegisterCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="@string/btn_cancelar"
                android:onClick="@{() -> updatecliente.cancelar()}"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="@string/btn_update"
                android:onClick="@{() -> updatecliente.updateCliente()}"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>